@@ -35,6 +35,13 @@
 @class iCalPerson;
 @class NSURL;
 
+typedef enum
+{
+  iCalAccessPublic = 0,
+  iCalAccessPrivate = 1,
+  iCalAccessConfidential = 2,
+} iCalAccessClass;
+
 @interface iCalEntityObject : CardGroup
 
 /* accessors */
